fix cut off icon on mobile screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8783,7 +8783,7 @@ https://flickity.metafizzy.co
 }
 
 .icon-warning {
-  width: 20px;
+  width: 22px;
   height: 20px;
   background-image: url(/assets/images/warning-sign.svg); }
 
